--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ python = "^3.12"
 fastapi = "^0.75.0"
 uvicorn = "^0.15.0"
 alembic = "^1.13.1"
+python-dotenv = "^1.0.1"
+aiomysql = "^0.2.0"
+sqlmodel = "^0.0.18"
+injector = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
 
